# ai_for_alignment

./: CMakeLists.txt  alignment.md  requirement_analysis_results_23:33:10_070525.md
.github/workflows/: main.yml
include/: collision_braking.h  driver_alert.h  obstacle_detection.h
requirements/: requirements.json
src/: collision_braking.cpp  driver_alert.cpp  ebs_system.cpp  hal_can.cpp  hal_can.h  obstacle_detection.cpp  rtos_integration.cpp
tests/: integration_test_ebs_system.cpp  test_collision_braking.cpp  test_driver_alert.cpp  test_obstacle_detection.cpp
